--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
   background-size: cover;
   vertical-align: bottom;
   overflow: hidden;
-  /*background-image: url('bg.jpeg');
+  /*background-image: url('bg.jpeg');*/
 }
 .container {
   margin-top: 0%;
